--- a/landing.html
+++ b/landing.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Create a landing page website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="landing.css">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -14,21 +13,19 @@
             <nav>
                 <h1>Logo</h1>
                 <ul>
-                    <li><a href="" class="active ">Home</a></li>
+                    <li><a href="" class="active">Home</a></li>
                     <li><a href="">Market Place</a></li>
                     <li><a href="">Our Services</a></li>
-        
                 </ul>
                 <div class="checkbtn">
-                    <!-- <input type="checkbox" class="check" /> -->
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
             </nav>
         </div>
         <div class="article">
-            <h1>Best HTML website Templates</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod quo aliquam corporis neque obcaecati. Qui tenetur sequi architecto animi similique?</p>
-            <a href="" class="btn">Download now</a>
+            <h1>Best HTML and CSS templates website</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A earum ad sequi magni ex consectetur molestias inventore iste, architecto quae!</p>
+            <a href="" class="btn">Download Now</a>
         </div>
     </section>
 </body>
